[gd_scene load_steps=2 format=3 uid="uid://bqw5x8m3fn7yk"]

[ext_resource type="Script" path="res://scripts/row_tile_node.gd" id="1_1"]

[node name="RowTileNode" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1")

[node name="TileTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Border" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TouchArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="TouchArea" to="." method="_on_touch_area_gui_input"]
